--- a/package.json
+++ b/package.json
@@ -13,12 +13,18 @@
   "dependencies": {
     "@angular/animations": "~11.0.5",
     "@angular/common": "~11.0.5",
-    "@angular/compiler": "~11.0.5",
+    "@angular/compiler": "^11.0.5",
     "@angular/core": "~11.0.5",
     "@angular/forms": "~11.0.5",
     "@angular/platform-browser": "~11.0.5",
     "@angular/platform-browser-dynamic": "~11.0.5",
     "@angular/router": "~11.0.5",
+    "@ng-bootstrap/ng-bootstrap": "^8.0.1",
+    "@progress/kendo-theme-bootstrap": "^4.29.0",
+    "@types/bootstrap": "^5.0.1",
+    "@types/jquery": "^3.5.5",
+    "bootstrap": "^4.0.0-alpha.6",
+    "jquery": "^3.5.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
